<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/nameEditText_margin"
        android:layout_marginRight="@dimen/nameEditText_margin"
        android:layout_marginTop="@dimen/nameEditText_margin"
        android:hint="@string/input_name"
        android:textSize="@dimen/nameEditText_textsize" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/okButton_margin">

        <Spinner
            android:id="@+id/idspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/okButton_margin"
            android:text="@string/delete" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

    <Button
        android:id="@+id/parsebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="parse" />
</LinearLayout>